Fix roadmap milestone items spacing

--- a/wagtailio/static/sass/components/_milestone-item.scss
+++ b/wagtailio/static/sass/components/_milestone-item.scss
@@ -17,7 +17,7 @@
         display: flex;
         justify-content: space-between;
         gap: 12px;
-        margin-inline: -$padding - $padding;
+        margin-inline: -$padding;
         margin-top: -$padding;
         padding: $padding;
         margin-bottom: 6px;
